reorganizando etiquetas de html

--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
+                        class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -52,49 +53,53 @@
         </nav>
     </header>
 
+    <main>
+        <h1 class="titulo">Sobre nosotros</h1>
+        <section class="container section-nosotros">
+            <div class="row div-nosotros">
+                <div class="col-lg-5 px-3">
+                    <img src="BASILE/fotomacetero.png" alt="Foto de producto" class="img-fluid" width="600"
+                        height="400">
+                </div>
+                <div class="col-lg-7 px-3 text-secondary">
+                    <h2 class="lead"> Somos un grupo de personas que, apasionadxs por los productos
+                        de madera y decoración, decidimos cumplir el sueño
+                        de abrir un taller propio.
+                        Logramos luego de un gran esfuerzo y largas jornadas de trabajo
+                        cumplir nuestro primer año juntos.
+                        Todo esto gracias a ustedes, que nos acompañan desde el primer día,
+                        apoyándonos en cada pequeño gran paso que damos.
+                        Nos dedicamos al diseño y ensamblado de productos decorativos de madera.
+                        Nos destacamos por la protección que otorgamos a la madera
+                        y el detalle logrado en las terminaciones.
+                        Este sitio web es una pequeña muestra de los trabajos realizados hasta el momento.
+                        Asimismo, estará en constante expansión, con nuevos productos y actualizaciones constantes.
+                        Hacemos desde el diseño de los productos hasta el ensamblado y el envío.</p>
+                    </h2>
+                </div>
+            </div>
+        </section>
+        <h1 class="titulo">Nuestro taller</h1>
+        <section class="container section-nosotros">
+            <div class="row div-nosotros">
+                <div class="col-lg-6 px-3 text-secondary">
+                    <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
+                        lugar que nos ha visto crecer a muchos de nosotros y que hoy
+                        nos encuentra inaugurando este nuevo espacio de producción.
+                    </h2>
+                </div>
+                <div class="col-lg-6 px-3 maps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.0391508694315!2d-58.56119088483797!3d-34.65371418044652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d94eb35311%3A0x1376ec3e6b84adc7!2sPringles%201465%2C%20B1704BOM%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661964999934!5m2!1ses-419!2sar"
+                        title="mapa de basile, taller de elementos decorativos" width="100%" height="400"
+                        style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                        class="maps-basile">
+                    </iframe>
+                </div>
+            </div>
+        </section>
+    </main>
 
-    <h1 class="titulo">Quienes somos</h1>
-    <main class="container main-nosotros">
-        <div class="row div-nosotros">
-            <div class="col-lg-5 px-3">
-                <img src="BASILE/fotomacetero.png" alt="Foto de producto" class="img-fluid" width="600" height="400">
-            </div>
-            <div class="col-lg-7 px-3 text-secondary">
-                <h2 class="lead"> Somos un grupo de personas que, apasionadxs por los productos
-                    de madera y decoración, decidimos cumplir el sueño
-                    de abrir un taller propio.
-                    Logramos luego de un gran esfuerzo y largas jornadas de trabajo
-                    cumplir nuestro primer año juntos.
-                    Todo esto gracias a ustedes, que nos acompañan desde el primer día,
-                    apoyándonos en cada pequeño gran paso que damos.
-                    Nos dedicamos al diseño y ensamblado de productos decorativos de madera.
-                    Nos destacamos por la protección que otorgamos a la madera
-                    y el detalle logrado en las terminaciones.
-                    Este sitio web es una pequeña muestra de los trabajos realizados hasta el momento.
-                    Asimismo, estará en constante expansión, con nuevos productos y actualizaciones constantes.
-                    Hacemos desde el diseño de los productos hasta el ensamblado y el envío.</p>
-                </h2>
-            </div>
-        </div>
-    </main>
-    <h1 class="titulo">Nuestro taller</h1>
-    <main class="container main-nosotros">
-        <div class="row div-nosotros">
-            <div class="col-lg-6 px-3 text-secondary">
-                <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
-                    lugar que nos ha visto crecer a muchos de nosotros y que hoy
-                    nos encuentra inaugurando este nuevo espacio de producción.
-                </h2>
-            </div>
-            <div class="col-lg-6 px-3 maps">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.0391508694315!2d-58.56119088483797!3d-34.65371418044652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d94eb35311%3A0x1376ec3e6b84adc7!2sPringles%201465%2C%20B1704BOM%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661964999934!5m2!1ses-419!2sar" title="mapa de basile, taller de elementos decorativos"
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade" class="maps-basile">
-                </iframe>
-            </div>
-        </div>
-    </main>
 
     <footer class="pt-5 pb-4 mt-5">
         <div class="footer container text-md-left">
@@ -133,17 +138,21 @@
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="titulo-footer mb-4">Contacto</h5>
                     <h6 class="margin-footer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                          </svg>Ramos Mejía, Buenos Aires.
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                        </svg>Ramos Mejía, Buenos Aires.
                     </h6>
                     <h6 class="margin-footer">
                         <i class="fas fa-brands fa-facebook-f"></i>Basile Bs.As
                     </h6>
                     <h6 class="margin-footer">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-                          </svg></i>SomosBasile
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                        </svg></i>SomosBasile
                     </h6>
                     <h6 class="margin-footer">
                         <i class="fas fa-phone"></i>+5491134715324
