--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="css/style.css">
     <title>Basile Wood & Deco | Elementos decorativos de madera para hogares</title>
 </head>
@@ -27,14 +28,14 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
+            <div class="container-fluid contenedor-nav">
                 <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end lista-nav" id="navbarNav">
                     <ul class="navbar-nav ul-menu">
                         <li class="nav-item list li-hover li-trans">
                             <a class="nav-link" href="index.html">Inicio</a>
@@ -49,33 +50,51 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="carrito.html">Carrito</a>
+                            <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
                     </ul>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end usuario-y-carrito" id="navbarNav">
+                    <a href="#" class="usuario-nav">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                          </svg>
+                    </a>
+                    <a href="carrito.html" class="carrito-nav">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                          </svg>
+                    </svg>
+                    </a>
                 </div>
             </div>
         </nav>
     </header>
 
+
     <main>
         <section class="section-banner">
-            <div class="div-banner">
-                <div class="banner">
-                    <img src="BASILE/bannerprimera.jpg" alt="Foto de producto" class="banner-primera">
-                </div>
-                <div class="banner">
-                    <img src="BASILE/bannersegunda.jpg" alt="Foto de producto" class="banner-segunda">
-                </div>
-                <div class="banner">
-                    <img src="BASILE/bannertercera.jpg" alt="Foto de producto" class="banner-tercera">
+            <div id="carouselExampleSlidesOnly" class="carousel slide div-banner" data-bs-ride="carousel" data-bs-interval="3000">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="BASILE/primeracarousel.png" class="d-block w-100" alt="foto de producto">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="BASILE/segundacarousel.png" class="d-block w-100" alt="foto de producto">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="BASILE/tercercarousel.png" class="d-block w-100" alt="foto de producto">
+                  </div>
                 </div>
             </div>
         </section>
+        
 
 
         <section class="container section-cards">
             <div class="row div-card-index">
-                <h1 class="col-12 mx-auto titulo">Basile Wood & Deco</h1>
+                <h1 data-aos="zoom-in-up" class="col-12 mx-auto titulo" >Basile Wood & Deco</h1>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
                     <h2 class="titulo-card">Responsablidad y compromiso asegurado</h2>
                     <img src="BASILE/cardclientes.png" alt="clientes" class="img-card">
