--- a/productos.html
+++ b/productos.html
@@ -20,6 +20,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -29,14 +30,14 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
+            <div class="container-fluid contenedor-nav">
                 <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <div class="collapse navbar-collapse justify-content-end lista-nav" id="navbarNav">
                     <ul class="navbar-nav ul-menu">
                         <li class="nav-item list li-hover li-trans">
                             <a class="nav-link" href="index.html">Inicio</a>
@@ -51,9 +52,23 @@
                             <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item list li-hover li-trans">
-                            <a class="nav-link" href="carrito.html">Carrito</a>
+                            <a class="nav-link" href="galeria.html">Galeria</a>
                         </li>
                     </ul>
+                </div>
+                <div class="collapse navbar-collapse justify-content-end usuario-y-carrito" id="navbarNav">
+                    <a href="#" class="usuario-nav">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                          </svg>
+                    </a>
+                    <a href="carrito.html" class="carrito-nav">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
+                            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+                          </svg>
+                    </svg>
+                    </a>
                 </div>
             </div>
         </nav>
@@ -64,12 +79,12 @@
         <h1 class="titulo"> Nuestros productos</h1>
 
         <section class="section-productos">
-            <h2 class="titulo-productos">Maceteros</h2>
-            <div class="contenedor-prod">
+            <h2 class="titulo-productos" data-aos="zoom-in-up">Maceteros</h2>
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Chico</p>
-                <div class="precio-carrito">
-                    <h5>$2500</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$2500</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -81,11 +96,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Mediano</p>
-                <div class="precio-carrito">
-                    <h5>$3000</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$3000</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -97,11 +112,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/maceterogrande.jpg" alt="foto macetero grande" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Grande</p>
-                <div class="precio-carrito">
-                    <h5>$3500</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$3500</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -116,12 +131,12 @@
         </section>
 
         <section class="section-productos">
-            <h2 class="titulo-productos">Deco para baños</h2>
-            <div class="contenedor-prod li-hover li-trans">
+            <h2 class="titulo-productos" data-aos="zoom-in-up">Deco para baños</h2>
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/alfombra.jpg" alt="foto alfombra" class="img-prod">
                 <p class="p-titulo-prod">Alfombra/deck</p>
-                <div class="precio-carrito">
-                    <h5>$1900</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$1900</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -133,11 +148,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/jabonera.jpg" alt="foto jabonera" class="img-prod">
                 <p class="p-titulo-prod">Jabonera</p>
-                <div class="precio-carrito">
-                    <h5>$1500</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$1500</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -149,11 +164,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
                 <p class="p-titulo-prod">Cruce de bañera</p>
-                <div class="precio-carrito">
-                    <h5>$2700</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$2700</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -168,12 +183,12 @@
         </section>
 
         <section class="section-productos">
-            <h2 class="titulo-productos">Estantes flotantes</h2>
-            <div class="contenedor-prod li-hover li-trans">
+            <h2 class="titulo-productos" data-aos="zoom-in-up">Estantes flotantes</h2>
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 20cm</p>
-                <div class="precio-carrito">
-                    <h5>$1400</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$1400</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -185,11 +200,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 25cm</p>
-                <div class="precio-carrito">
-                    <h5>$1900</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$1900</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -201,11 +216,11 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 30cm</p>
-                <div class="precio-carrito">
-                    <h5>$2300</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$2300</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -220,15 +235,15 @@
         </section>
 
         <section class="section-productos">
-            <h2 class="titulo-productos">Promociones</h2>
-            <div class="contenedor-prod li-hover li-trans">
+            <h2 class="titulo-productos" data-aos="zoom-in-up">Promociones</h2>
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
                 <p class="p-titulo-prod">Set Maceteros Snow x3</p>
                 <p class="p-desc-prod">Macetero chico + Maceta</p>
                 <p class="p-desc-prod">Macetero Mediano + Maceta</p>
                 <p class="p-desc-prod">Macetero Grande + Maceta</p>
-                <div class="precio-carrito">
-                    <h5>$4500</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$4500</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -240,11 +255,12 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/setdeck.png" alt="foto alfombra deck" class="img-prod">
                 <p class="p-titulo-prod">Set Alfombra/Deck + Jabonera</p>
-                <div class="precio-carrito">
-                    <h5>$2500</h5>
+                <p class="p-desc-prod">Alfombra/deck 30x50cm + Jabonera 12x8cm</p>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$2500</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -256,14 +272,14 @@
                     </a>
                 </div>
             </div>
-            <div class="contenedor-prod li-hover li-trans">
+            <div class="contenedor-prod" data-aos="zoom-in-up">
                 <img src="BASILE/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
                 <p class="p-titulo-prod">Set Estantes Flotantes</p>
                 <p class="p-desc-prod">Estante flotante 25x60x3,5</p>
                 <p class="p-desc-prod">Estante flotante 25x80x3,5</p>
                 <p class="p-desc-prod">Estante flotante 25x100x3,5</p>
-                <div class="precio-carrito">
-                    <h5>$4900</h5>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$4900</h6>
                     <a href="#" class="carrito">
                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
                             class="bi bi-cart-plus" viewBox="0 0 16 16">
@@ -276,6 +292,25 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-productos">
+            <h2 class="titulo-productos" data-aos="zoom-in-up">Sillones</h2>
+            <div class="contenedor-prod" data-aos="zoom-in-up">
+                <img src="BASILE/sillon.png" alt="foto alfombra" class="img-prod">
+                <p class="p-titulo-prod">Sillon individual</p>
+                <div class="contenedor-precio-carrito">
+                    <h6 class="precio-carrito">$5600</h6>
+                    <a href="#" class="carrito">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                            class="bi bi-cart-plus" viewBox="0 0 16 16">
+                            <path
+                                d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                            <path
+                                d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
     </main>
 
 
