añadi carousel en seccion nosotros

--- a/carrito.html
+++ b/carrito.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -115,7 +115,9 @@
                 <small>$0.00 ARS</small>
             </div>
         </div>
-        <div class="precio-final">
+    </section>
+    <section class="section-carrito">
+        <div class="contenedor-principal">
             <div class="total">
                 <small>Total</small> 
             </div>
