--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
         <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!!">
@@ -69,7 +69,7 @@
     <main>
         <h1 class="titulo">Envianos tus dudas!</h1>
 
-        <section class="container">
+        <section class="section-contacto">
             <div class="row formulario contenedor-principal">
                 <h6 class="col-xs-12 col-sm- 12 col-md-12 col-lg-12 mx-auto mt-3 texto-formulario">¿Tienes dudas acerca
                     de
