--- a/nosotros.html
+++ b/nosotros.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Roboto:wght@300&display=swap"
+    <meta name="description"
+        content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -52,16 +53,20 @@
                 </div>
                 <div class="collapse navbar-collapse justify-content-end usuario-y-carrito" id="navbarNav">
                     <a href="#" class="usuario-nav">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                            <path fill-rule="evenodd"
+                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                        </svg>
                     </a>
                     <a href="carrito.html" class="carrito-nav">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-                            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                          </svg>
-                    </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-cart4" viewBox="0 0 16 16">
+                            <path
+                                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                        </svg>
+                        </svg>
                     </a>
                 </div>
             </div>
@@ -70,40 +75,66 @@
 
     <main>
         <h1 class="titulo">Sobre nosotros</h1>
-        <section class="container section-nosotros">
-            <div class="row div-nosotros">
-                <div class="col-lg-5 px-3">
-                    <img src="BASILE/fotomacetero.png" alt="Foto de producto" class="img-fluid" width="600"
-                        height="400">
+        <section class="section-nosotros">
+            <div id="carouselExampleIndicators" class="carousel slide carousel-nosotros" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
-                <div class="col-lg-7 px-3 text-secondary">
-                    <h2 class="lead"> Somos un grupo de personas que, apasionadxs por los productos
-                        de madera y decoración, decidimos cumplir el sueño
-                        de abrir un taller propio.
-                        Logramos luego de un gran esfuerzo y largas jornadas de trabajo
-                        cumplir nuestro primer año juntos.
-                        Todo esto gracias a ustedes, que nos acompañan desde el primer día,
-                        apoyándonos en cada pequeño gran paso que damos.
-                        Nos dedicamos al diseño y ensamblado de productos decorativos de madera.
-                        Nos destacamos por la protección que otorgamos a la madera
-                        y el detalle logrado en las terminaciones.
-                        Este sitio web es una pequeña muestra de los trabajos realizados hasta el momento.
-                        Asimismo, estará en constante expansión, con nuevos productos y actualizaciones constantes.
-                        Hacemos desde el diseño de los productos hasta el ensamblado y el envío.</p>
-                    </h2>
+                <div class="carousel-inner img-carousel-nosotros">
+                    <div class="carousel-item active">
+                        <img src="BASILE/nosotroscarouseluno.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="BASILE/nosotroscarouseldos.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="BASILE/nosotroscarouseltres.png" class="d-block w-100" alt="...">
+                    </div>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div>
+                <p class="lead"> Somos un grupo de personas que, apasionadxs por los productos
+                    de madera y decoración, decidimos cumplir el sueño
+                    de abrir un taller propio.
+                    Logramos luego de un gran esfuerzo y largas jornadas de trabajo
+                    cumplir nuestro primer año juntos.
+                    Todo esto gracias a ustedes, que nos acompañan desde el primer día,
+                    apoyándonos en cada pequeño gran paso que damos.
+                    Nos dedicamos al diseño y ensamblado de productos decorativos de madera.
+                    Nos destacamos por la protección que otorgamos a la madera
+                    y el detalle logrado en las terminaciones.
+                    Este sitio web es una pequeña muestra de los trabajos realizados hasta el momento.
+                    Asimismo, estará en constante expansión, con nuevos productos y actualizaciones constantes.
+                    Hacemos desde el diseño de los productos hasta el ensamblado y el envío.</p>
+                </p>
             </div>
         </section>
+        
         <h1 class="titulo">Nuestro taller</h1>
-        <section class="container section-nosotros">
-            <div class="row div-nosotros">
-                <div class="col-lg-6 px-3 text-secondary">
+        <section class="section-nosotros">
+            <div class="div-nosotros">
+                <p class="lead">
                     <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
                         lugar que nos ha visto crecer a muchos de nosotros y que hoy
                         nos encuentra inaugurando este nuevo espacio de producción.
                     </h2>
-                </div>
-                <div class="col-lg-6 px-3 maps">
+                </p>
+                <div class="maps">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.0391508694315!2d-58.56119088483797!3d-34.65371418044652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d94eb35311%3A0x1376ec3e6b84adc7!2sPringles%201465%2C%20B1704BOM%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661964999934!5m2!1ses-419!2sar"
                         title="mapa de basile, taller de elementos decorativos" width="100%" height="400"
