añadi barra superior en header

--- a/nosotros.html
+++ b/nosotros.html
@@ -18,12 +18,32 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="keywords"
+        content="Inicio, productos, nosotros, carrito, galeria, contacto, Decoracion, produccion, taller, fabricantes, decoracion de madera, diseño, La Matanza, cuotas sin interes, madera, maceteros, estantes, Ramos Mejia, redes sociales">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Basile Wood & Deco">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description"
+        content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="css/style.css">
     <title>Nosotros | Elementos decorativos de madera para hogares</title>
 </head>
 
 <body>
     <header>
+        <!--barra superior-->
+        <div class="div-bar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-check2-circle icono-bar" viewBox="0 0 16 16">
+                <path
+                    d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z" />
+                <path
+                    d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z" />
+            </svg>
+            <h6 class="texto-bar"> Hasta 6 cuotas sin interes</h6>
+        </div>
+        <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
                 <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
@@ -73,8 +93,10 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main-nosotros">
         <h1 class="titulo">Sobre nosotros</h1>
+
+        <!--carousel nosotros-->
         <section class="section-nosotros">
             <div id="carouselExampleIndicators" class="carousel slide carousel-nosotros" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -124,15 +146,17 @@
                 </p>
             </div>
         </section>
-        
+
         <h1 class="titulo">Nuestro taller</h1>
+
+        <!--seccion de google maps-->
         <section class="section-nosotros">
             <div class="div-nosotros">
                 <p class="lead">
-                    <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
-                        lugar que nos ha visto crecer a muchos de nosotros y que hoy
-                        nos encuentra inaugurando este nuevo espacio de producción.
-                    </h2>
+                <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
+                    lugar que nos ha visto crecer a muchos de nosotros y que hoy
+                    nos encuentra inaugurando este nuevo espacio de producción.
+                </h2>
                 </p>
                 <div class="maps">
                     <iframe
