--- a/productos.html
+++ b/productos.html
@@ -20,15 +20,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
+    <meta name="description"
+        content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <meta name="keywords"
+        content="Inicio, productos, nosotros, carrito, galeria, contacto, Decoracion, produccion, taller, fabricantes, decoracion de madera, diseño, La Matanza, cuotas sin interes, madera, maceteros, estante flotante, cruce de bañera, jabonera, sillon, alfombra, deck, Ramos Mejia, redes sociales">
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Basile Wood & Deco">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description"
+        content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="css/style.css">
     <title>Productos | Elementos decorativos de madera para hogares</title>
 </head>
 
 <body>
     <header>
+        <!--barra superior-->
+        <div class="div-bar">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-check2-circle icono-bar" viewBox="0 0 16 16">
+                <path
+                    d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z" />
+                <path
+                    d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z" />
+            </svg>
+            <h6 class="texto-bar"> Hasta 6 cuotas sin interes</h6>
+        </div>
+        <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
                 <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
@@ -58,16 +79,20 @@
                 </div>
                 <div class="collapse navbar-collapse justify-content-end usuario-y-carrito" id="navbarNav">
                     <a href="#" class="usuario-nav">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                          </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                            <path fill-rule="evenodd"
+                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                        </svg>
                     </a>
                     <a href="carrito.html" class="carrito-nav">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
-                            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
-                          </svg>
-                    </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                            class="bi bi-cart4" viewBox="0 0 16 16">
+                            <path
+                                d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z" />
+                        </svg>
+                        </svg>
                     </a>
                 </div>
             </div>
@@ -78,6 +103,7 @@
 
         <h1 class="titulo"> Nuestros productos</h1>
 
+        <!--seccion maceteros-->
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Maceteros</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
@@ -129,7 +155,7 @@
                 </div>
             </div>
         </section>
-
+        <!--seccion deco de baños-->
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Deco para baños</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
@@ -182,6 +208,7 @@
             </div>
         </section>
 
+        <!--seccion estantes flotantes-->
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Estantes flotantes</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
@@ -233,7 +260,7 @@
                 </div>
             </div>
         </section>
-
+        <!--seccion promociones-->
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Promociones</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
@@ -292,7 +319,7 @@
                 </div>
             </div>
         </section>
-
+        <!--seccion sillones-->
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Sillones</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
