corregi etiquetas de index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../BASILE/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="BASILE/logobasilefavicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <meta property="og:image" content="">
     <meta property="og:description"
         content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Basile Wood & Deco | Elementos decorativos de madera para hogares</title>
 </head>
 
@@ -50,7 +50,7 @@
         <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
-                <a href="index.html" class="navbar-brand"><img src="../BASILE/logobasile.jpg" alt="Logo Basile"
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
