borre carpeta de imagenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -174,7 +174,7 @@
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
                     <h5 class="titulo-footer mb-4">Secciones</h5>
                     <h6 class="margin-footer">
-                        <a href="index.html" class="text-footer">Inicio</a>
+                        <a href="../index.html" class="text-footer">Inicio</a>
                     </h6>
                     <h6 class="margin-footer">
                         <a href="nosotros.html" class="text-footer">Nosotros</a>
