--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="BASILE/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="basile/logobasilefavicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Smooch&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
         <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
-                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
+                <a href="index.html" class="navbar-brand"><img src="basile/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +81,7 @@
                                 d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
                         </svg>
                     </a>
-                    <a href="carrito.html" class="carrito-nav">
+                    <a href="pages/carrito.html" class="carrito-nav">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="" fill="currentColor"
                             class="bi bi-cart3" viewBox="0 0 16 16">
                             <path
@@ -101,13 +101,13 @@
                 data-bs-interval="3000">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="BASILE/primercarousel.png" class="d-block w-100" alt="foto de producto">
+                        <img src="basile/primercarousel.png" class="d-block w-100" alt="foto de producto">
                     </div>
                     <div class="carousel-item">
-                        <img src="BASILE/segundocarousel.png" class="d-block w-100" alt="foto de producto">
+                        <img src="basile/segundocarousel.png" class="d-block w-100" alt="foto de producto">
                     </div>
                     <div class="carousel-item">
-                        <img src="BASILE/tercercarousel.png" class="d-block w-100" alt="foto de producto">
+                        <img src="basile/tercercarousel.png" class="d-block w-100" alt="foto de producto">
                     </div>
                 </div>
             </div>
@@ -121,17 +121,17 @@
                 <h1 data-aos="zoom-in-up" class="col-12 mx-auto titulo">Basile Wood & Deco</h1>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
                     <h2 class="titulo-card">Responsablidad y compromiso asegurado</h2>
-                    <img src="BASILE/cardclientes.png" alt="clientes" class="img-card">
+                    <img src="basile/cardclientes.png" alt="clientes" class="img-card">
                     <h3 class="p-card">Nuestro principal objetivo es brindar el mejor servicio a los clientes</h3>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
                     <h2 class="titulo-card">Envíos a todo el país</h2>
-                    <img src="BASILE/cardviaje.png" alt="Envios" class="img-card">
+                    <img src="basile/cardviaje.png" alt="Envios" class="img-card">
                     <h3 class="p-card">Realizamos los envíos por correo argentino</h3>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
                     <h2 class="titulo-card">Sitio seguro</h2>
-                    <img src="BASILE/cardseguridad.png" alt="seguridad" class="img-card">
+                    <img src="basile/cardseguridad.png" alt="seguridad" class="img-card">
                     <h3 class="p-card">Protegemos tus datos</h3>
                 </div>
             </div>
@@ -149,19 +149,19 @@
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
                     <h5 class="titulo-footer mb-4">Secciones</h5>
                     <h6 class="margin-footer">
-                        <a href="index.html" class="text-footer">Inicio</a>
+                        <a href="../index.html" class="text-footer">Inicio</a>
                     </h6>
                     <h6 class="margin-footer">
-                        <a href="nosotros.html" class="text-footer">Nosotros</a>
+                        <a href="pages/nosotros.html" class="text-footer">Nosotros</a>
                     </h6>
                     <h6 class="margin-footer">
-                        <a href="productos.html" class="text-footer">Productos</a>
+                        <a href="pages/productos.html" class="text-footer">Productos</a>
                     </h6>
                     <h6 class="margin-footer">
-                        <a href="contacto.html" class="text-footer">Contacto</a>
+                        <a href="pages/contacto.html" class="text-footer">Contacto</a>
                     </h6>
                     <h6 class="margin-footer">
-                        <a href="carrito.html" class="text-footer">Carrito</a>
+                        <a href="pages/carrito.html" class="text-footer">Carrito</a>
                     </h6>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
