modifique links de imagenes

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../BASILE/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../basile/logobasilefavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,7 +52,7 @@
         <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
-                <a href="index.html" class="navbar-brand"><img src="../BASILE/logobasile.jpg" alt="Logo Basile"
+                <a href="index.html" class="navbar-brand"><img src="../basile/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,7 +103,7 @@
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Maceteros</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
+                <img src="../basile/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Chico</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$2500</h6>
@@ -119,7 +119,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
+                <img src="../basile/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Mediano</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$3000</h6>
@@ -135,7 +135,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/maceterogrande.jpg" alt="foto macetero grande" class="img-prod">
+                <img src="../basile/maceterogrande.jpg" alt="foto macetero grande" class="img-prod">
                 <p class="p-titulo-prod">Macetero Snow Grande</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$3500</h6>
@@ -155,7 +155,7 @@
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Deco para baños</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/alfombra.jpg" alt="foto alfombra" class="img-prod">
+                <img src="../basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
                 <p class="p-titulo-prod">Alfombra/deck</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$1900</h6>
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/jabonera.jpg" alt="foto jabonera" class="img-prod">
+                <img src="../basile/jabonera.jpg" alt="foto jabonera" class="img-prod">
                 <p class="p-titulo-prod">Jabonera</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$1500</h6>
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
+                <img src="../basile/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
                 <p class="p-titulo-prod">Cruce de bañera</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$2700</h6>
@@ -208,7 +208,7 @@
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Estantes flotantes</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
+                <img src="../basile/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 20cm</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$1400</h6>
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
+                <img src="../basile/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 25cm</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$1900</h6>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
+                <img src="../basile/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
                 <p class="p-titulo-prod">Estante flotante 30cm</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$2300</h6>
@@ -260,7 +260,7 @@
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Promociones</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
+                <img src="../basile/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
                 <p class="p-titulo-prod">Set Maceteros Snow x3</p>
                 <p class="p-desc-prod">Macetero chico + Maceta</p>
                 <p class="p-desc-prod">Macetero Mediano + Maceta</p>
@@ -279,7 +279,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/setdeck.png" alt="foto alfombra deck" class="img-prod">
+                <img src="../basile/setdeck.png" alt="foto alfombra deck" class="img-prod">
                 <p class="p-titulo-prod">Set Alfombra/Deck + Jabonera</p>
                 <p class="p-desc-prod">Alfombra/deck 30x50cm + Jabonera 12x8cm</p>
                 <div class="contenedor-precio-carrito">
@@ -296,7 +296,7 @@
                 </div>
             </div>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
+                <img src="../basile/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
                 <p class="p-titulo-prod">Set Estantes Flotantes</p>
                 <p class="p-desc-prod">Estante flotante 25x60x3,5</p>
                 <p class="p-desc-prod">Estante flotante 25x80x3,5</p>
@@ -319,7 +319,7 @@
         <section class="section-productos">
             <h2 class="titulo-productos" data-aos="zoom-in-up">Sillones</h2>
             <div class="contenedor-prod" data-aos="zoom-in-up">
-                <img src="../BASILE/sillon.png" alt="foto alfombra" class="img-prod">
+                <img src="../basile/sillon.png" alt="foto alfombra" class="img-prod">
                 <p class="p-titulo-prod">Sillon individual</p>
                 <div class="contenedor-precio-carrito">
                     <h6 class="precio-carrito">$5600</h6>
