--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../BASILE/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../basile/logobasilefavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,7 +42,7 @@
         <!--nav bar-->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid contenedor-nav">
-                <a href="index.html" class="navbar-brand"><img src="../BASILE/logobasile.jpg" alt="Logo Basile"
+                <a href="index.html" class="navbar-brand"><img src="../basile/logobasile.jpg" alt="Logo Basile"
                         class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
         <section class="container section-carrito">
             <div class="row div-carrito">
                 <div class="col-3 mx-auto mt-3 text-black text-center">
-                    <img src="../BASILE/tresmaceteros.jpg" alt="set de maceteros" width="100" class="img-fluid">
+                    <img src="../basile/tresmaceteros.jpg" alt="set de maceteros" width="100" class="img-fluid">
                 </div>
                 <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                     <small>Set de maceteros x3</small>
@@ -119,7 +119,7 @@
                     <small>$4900</small>
                 </div>
                 <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
-                    <img src="../BASILE/alfombra.jpg" alt="alfombra" width="100" class="img-fluid">
+                    <img src="../basile/alfombra.jpg" alt="alfombra" width="100" class="img-fluid">
                 </div>
                 <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                     <small>Alfombra/deck</small>
