añadi ultimas etiquetas meta

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         content="Inicio, productos, nosotros, carrito, galeria, contacto, Decoracion de interiores, clientes, envios, cuotas sin interes, madera, maceteros, estantes, Ramos Mejia, redes sociales, registro, cuenta, ingresar">
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Basile Wood & Deco">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://basilebsas.000webhostapp.com/index.html">
+    <meta property="og:image" content="https://basilebsas.000webhostapp.com/basile/logobasile.jpg">
     <meta property="og:description"
         content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="css/style.css">
