--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,8 +22,8 @@
         content="Inicio, productos, nosotros, carrito, galeria, contacto, Decoracion, produccion, taller, fabricantes, decoracion de madera, diseño, La Matanza, cuotas sin interes, madera, maceteros, estantes, Ramos Mejia, redes sociales">
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Basile Wood & Deco">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://basilebsas.000webhostapp.com/index.html">
+    <meta property="og:image" content="https://basilebsas.000webhostapp.com/basile/logobasile.jpg">
     <meta property="og:description"
         content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="../css/style.css">
