--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,8 +18,8 @@
         content="Inicio, productos, nosotros, carrito, galeria, contacto, ubicación, telefono, Email, consulta, Decoracion, taller, diseño, La Matanza, cuotas sin interes, madera, Ramos Mejia, redes sociales">
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Basile Wood & Deco">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:url" content="https://basilebsas.000webhostapp.com/index.html">
+    <meta property="og:image" content="https://basilebsas.000webhostapp.com/basile/logobasile.jpg">
     <meta property="og:description"
         content="Fabricantes de elementos decorativos para tu hogar. Ubicados en Ramos Mejía, somos apasionados de la madera y realizamos pedidos personalizados para cada cliente, no dudes en consultarnos!">
     <link rel="stylesheet" href="../css/style.css">
