simulador interactivo de carrito de compras

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             </div>
     </footer>
 
-
+   
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
@@ -223,6 +223,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
         integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
         crossorigin="anonymous"></script>
+    
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
